<resources>
    <string name="app_name">Match Gold</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="firebase_root_url">match</string>
    <string name="firebase_organic">match_organic</string>
    <string name="one_signal_key">5c0ffee2-7722-4618-ae1d-5f30b2350926</string>
    <string name="apps_dev_key">2wT8WsUYw4c5UuzQ4FY934</string>
    <string name="fb_app_id">1023716745170517</string>
    <string name="fb_at">s38UQKJm6nfCvQlQmbmyixGXHR4</string>

    <string name="footbal_api_key">8a9c1ecfb01d4476b0d905f8cad65a61</string>
    <string name="goals">Goals:%d</string>
    <string name="last_updated">Last updated:%s</string>
    <string name="position">Position: %s</string>
    <string name="nationality">Nationality: %s</string>
    <string name="country_birth">Country of birth: %s</string>
    <string name="name">Name: %s</string>
    <string name="date_of_birth">Date of birth: %s</string>
    <string name="match_day">Match day: %d</string>
    <string name="start">Start %s</string>
    <string name="end">End %s</string>
    <string name="competitions">Competitions</string>
    <string name="players">Players</string>
    <string name="scorers">Scorers</string>
</resources>